fixed the white gap on donation section

--- a/assets/css/donate-section.css
+++ b/assets/css/donate-section.css
@@ -4,12 +4,8 @@
     #53436a 0%,
     #231f20 100%
   );
+  width: 100%;
 }
-
-
-
-
-
 
 
 .donate-more-bttn {
